<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.clinic.detail.payment.CardPaymentIntroActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarCardPayment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/arrBackPaymentIntro"
                android:layout_width="52dp"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_arrow_back_blue" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="52dp"
                android:layout_marginEnd="52dp"
                android:text="@string/cardPayment"
                android:textSize="18sp" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarCardPayment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cardTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16sp"
                android:text="@string/cardNumber2" />

            <EditText
                android:id="@+id/cardNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/cardTxt"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/back_card_number"
                android:hint="@string/cardNumberHit2"
                android:inputType="number"
                android:maxLength="4"
                android:paddingStart="8dp"
                android:paddingEnd="4dp" />

            <TextView
                android:id="@+id/nameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardNumberEditText"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16sp"
                android:text="@string/cardHolder" />

            <EditText
                android:id="@+id/cardHolderEditText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/nameTxt"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/back_card_number"
                android:hint="@string/fullName"
                android:inputType="textPersonName"
                android:paddingStart="8dp"
                android:paddingEnd="4dp" />

            <CheckBox
                android:id="@+id/checkBoxPrivacyPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardHolderEditText"
                android:layout_marginStart="18sp"
                android:layout_marginTop="26sp"
                android:layout_marginBottom="22sp"
                android:checked="false" />

            <TextView
                android:id="@+id/textViewTextText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardHolderEditText"
                android:layout_marginTop="32dp"
                android:layout_toEndOf="@+id/checkBoxPrivacyPay"
                android:text="@string/textObrabot2"
                android:textColor="#CFC7C7"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textViewPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardHolderEditText"
                android:layout_marginStart="2dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="52dp"
                android:layout_toEndOf="@+id/textViewTextText"
                android:text="@string/personalInfo2"
                android:textColor="#21CEE0"
                android:textSize="12sp" />

            <Button
                android:id="@+id/buttonNextPaymentIntro"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_below="@+id/textViewPay"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"
                android:layout_marginBottom="56dp"
                android:background="@drawable/button_backg"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/next_text"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>