<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.PinOneFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:gravity="center">


        <ImageView
            android:id="@+id/imgViewLogoPinOne"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:src="@drawable/logo_primedoc" />

        <TextView
            android:id="@+id/textViewPinOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgViewLogoPinOne"
            android:layout_marginStart="26dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="26dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/pin_text_one"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearPinOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewPinOne"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dot1PinOne"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_pin_inactive" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dot2PinOne"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="35dp"
                android:src="@drawable/ic_pin_inactive" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dot3PinOne"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="35dp"
                android:src="@drawable/ic_pin_inactive" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dot4PinOne"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="35dp"
                android:src="@drawable/ic_pin_inactive" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearPinOne"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1PinOne"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:text="@string/_1"
                    android:textColor="#656262"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/button2PinOne"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:text="@string/_2"
                    android:textColor="#656262"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/button3PinOne"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:text="@string/_3"
                    android:textColor="#656262"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button4PinOne"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:text="@string/_4"
                    android:textColor="#656262"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/button5PinOne"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:text="@string/_5"
                    android:textColor="#656262"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/button6PinOne"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:text="@string/_6"
                    android:textColor="#656262"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button7PinOne"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:text="@string/_7"
                    android:textColor="#656262"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/button8PinOne"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:text="@string/_8"
                    android:textColor="#656262"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/button9PinOne"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:text="@string/_9"
                    android:textColor="#656262"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:textColor="#656262"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/button0PinOne"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:text="@string/_0"
                    android:textColor="#656262"
                    android:textSize="22sp" />

                <RelativeLayout
                    android:id="@+id/buttondelPinOne"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@color/transparent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_delete_pin" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>